Archive2/da/6d5f2542ab3cc3/output
main.cpp:64:18: error: 'A' is not polymorphic
    if (B* myB = dynamic_cast<B*>(myA))
                 ^                ~~~
1 error generated.
